--- a/app/views/home/schedule.html.erb
+++ b/app/views/home/schedule.html.erb
@@ -73,38 +73,67 @@
       <div class="timeline">
       <div class="timeline__wrap">
       <div class="timeline__items">
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>09:30 a.m. - 10:30 a.m.</h2>
-      <p>Registration</p>
-      </div>
-      </div>
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>10:30 a.m - 12:15 pm</h2>
-      <p>
-      <li> Key note speech by Dr. Ambika Zutshi, Deakin University, Melbourne </li>
-      <li> Panel discussion on 'Revisiting research agenda for Sustainability: Options and Futures' </li></p>
-      </div>
-      </div>
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>12:30 p.m. - 1:00 pm</h2>
-      <p> Poster presentation session</p>
-      </div>
-      </div>
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>2:00 p.m. - 4:00 pm</h2>
-      <p>Paper presentations</p>
-      </div>
-      </div>
-      <div class="timeline__item">
-      <div class="timeline__content">
-      <h2>4:15 p.m. - 4:45 pm</h2>
-      <p>Valedictory session</p>
-      </div>
-      </div>
+        <div class="timeline__item">
+          <div class="timeline__content">
+          <h2>09:30 a.m. - 10:30 a.m.</h2>
+          <p>Registration</p>
+          </div>
+        </div>
+        <div class="timeline__item">
+          <div class="timeline__content">
+            <h2>10:00 am-10:30 am
+</h2>
+            <p>
+              Tea and Refreshments</p>
+          </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>10:30 am-10:50 am</h2>
+        <p> Keynote speech by Dr. Ambika Zutshi, <br> Deakin University, Melbourne</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>10:55 am-11:40 am</h2>
+        <p>Panel discussion on 'Revisiting research agenda for Sustainability: Options and Futures' <br> <br> 
+Panel members: 
+<li>D.P. Dash, Founding Editor, Journal of Research Practice</li>
+<li>Anshuman Raj, Film maker</li>
+<li>Rajendra Srivastava, Joint President, Global Human Resources, Aditya Birla Group</li>
+</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>11:45 am-12:15 pm</h2>
+        <p>Discussion by Co-Chairs</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>12:20 pm- 12:50 pm</h2>
+        <p>Poster presentations</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>1:00 pm-2:00 pm</h2>
+        <p>Lunch</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>2:00 pm-4:00 pm</h2>
+        <p>Paper presentations</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>4:15 p.m. - 4:45 pm</h2>
+        <p>Valedictory session</p>
+        </div>
+        </div>
       </div>
       </div>
       </div>
