--- a/app/views/home/trackchairs.html.erb
+++ b/app/views/home/trackchairs.html.erb
@@ -1214,7 +1214,7 @@ She has been involved in national and state level policy making work and has had
               <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px;color:#6c757d!important ">MANAGEMENT EDUCATION FOR THE FUTURE</p>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Professor (Marketing and Strategy)
               </h5>
-              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">mbedkar University, Delhi</h5>
+              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Ambedkar University, Delhi</h5>
             </div>
           </div>
           <div class="row-5 w-row" >
