payment mobile number

--- a/app/views/home/application.html.erb
+++ b/app/views/home/application.html.erb
@@ -517,7 +517,7 @@ td.text-right {
                         'merchantId': 'L522',
                         'currency': 'INR',
                         'consumerId': '<%= current_user.id%>',
-                        'consumerMobileNo': '<%= current_user.mobile_number%>',
+                        'consumerMobileNo': '7506985279',
                         'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
@@ -573,7 +573,7 @@ td.text-right {
                         'merchantId': 'L522',
                         'currency': 'INR',
                         'consumerId': '<%= current_user.id%>',
-                        'consumerMobileNo': '<%= current_user.mobile_number%>',
+                        'consumerMobileNo': '7506985279',
                         'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
