--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -472,7 +472,7 @@ td.text-right {
                         'merchantId': 'L522',
                         'currency': 'INR',
                         'consumerId': '<%= current_user.id %>',
-                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerMobileNo': '7506985279',
                         'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
@@ -528,7 +528,7 @@ td.text-right {
                         'merchantId': 'L522',
                         'currency': 'INR',
                         'consumerId': '<%= current_user.id %>',
-                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerMobileNo': '7506985279',
                         'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
@@ -584,7 +584,7 @@ td.text-right {
                         'merchantId': 'L522',
                         'currency': 'INR',
                         'consumerId': '<%= current_user.id %>',
-                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerMobileNo': '7506985279',
                         'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
@@ -640,7 +640,7 @@ td.text-right {
                         'merchantId': 'L522',
                         'currency': 'INR',
                         'consumerId': '<%= current_user.id %>',
-                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerMobileNo': '7506985279',
                         'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
@@ -696,7 +696,7 @@ td.text-right {
                         'merchantId': 'L522',
                         'currency': 'INR',
                         'consumerId': '<%= current_user.id %>',
-                        'consumerMobileNo': '<%= current_user.mobile_number %>',
+                        'consumerMobileNo': '7506985279',
                         'consumerEmailId': '<%= current_user.email %>',
                         'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
                         'items': [{
