--- a/app/views/home/schedule.html.erb
+++ b/app/views/home/schedule.html.erb
@@ -100,7 +100,7 @@
 Panel members: 
 <li>D.P. Dash, Founding Editor, Journal of Research Practice</li>
 <li>Anshuman Raj, Film maker</li>
-<li>Rajendra Srivastava, Joint President, Global Human Resources, Aditya Birla Group</li>
+<li>Rajesh Srivastava, Joint President, Global Human Resources, Aditya Birla Group</li>
 </p>
         </div>
         </div>
