--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -119,7 +119,7 @@ ul {
           </li>
 
           <li style="width:50%;">
-          <a href="/trackdetails#7"><img src="../Icons/Innovation on Pedagogy and Curriculum.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <a href="/tracks/innovating"><img src="../Icons/Innovation on Pedagogy and Curriculum.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
           <p style="padding-top: 20px; display: inline"> 
           Innovating on Pedagogy and Curriculum</p></a>
           </li>
@@ -130,7 +130,7 @@ ul {
           </li>
 
           <li style="width:50%;">
-            <a href="/trackdetails#13"><img src="../Icons/Management Education for the Future.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+            <a href="/tracks/management"><img src="../Icons/Management Education for the Future.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
             <p style="padding-top: 20px; display: inline"> 
             Management Education for Future</p></a>
           </li>
@@ -147,20 +147,20 @@ ul {
           </li>
 
           <li style="width:50%;">
-            <a href="/trackdetails#3"><img src="../Icons/architecture.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline">  Design Thinking in Management</p>
+            <a href="/tracks/designthinking"><img src="../Icons/architecture.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline">  Design Thinking in Management</p>
             </a>
           </li>
 
 
           <li style="width:50%;">
-          <a href="/trackdetails#9"><img src="../Icons/Social Entrepreneurship.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <a href="/tracks/social"><img src="../Icons/Social Entrepreneurship.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
           <p style="padding-top: 20px; display: inline"> 
           Social Entrepreneurship</p></a>
           </li>
 
 
           <li style="width:50%;">
-            <a href="/trackdetails#4"><img src="../Icons/Engaging with SDG's.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Engaging with SDGs - The Local Experiences</p>
+            <a href="/tracks/engaging"><img src="../Icons/Engaging with SDG's.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Engaging with SDGs - The Local Experiences</p>
             </a>
           </li>
 
@@ -173,7 +173,7 @@ ul {
 
 
           <li style="width:50%;">
-          <a href="/trackdetails#5"><img src="../Icons/Extreme Events.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <a href="/tracks/extremeevents"><img src="../Icons/Extreme Events.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
           <p style="padding-top: 20px; display: inline">  
           Extreme Events, Disasters and Building Resilience</p></a>
           </li>
@@ -182,7 +182,7 @@ ul {
 
 
           <li style="width:50%;">
-          <a href="/trackdetails#11"><img src="../Icons/Sustainability and Development.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainability and Development</p></a>
+          <a href="/tracks/sustainability"><img src="../Icons/Sustainability and Development.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainability and Development</p></a>
           </li>
 
           <li style="width:50%;">
@@ -193,12 +193,12 @@ ul {
 
 
           <li style="width:50%;">
-          <a href="/trackdetails#12"><img src="../Icons/Sustainable Businesses.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainable Businesses</p></a>
+          <a href="/tracks/sustainbusiness"><img src="../Icons/Sustainable Businesses.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainable Businesses</p></a>
           </li>
 
 
           <li style="width:50%;">
-          <a style="font-size:15px;" href="/trackdetails#6"><img src="../Icons/Inequality - Role of Businesses.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
+          <a style="font-size:15px;" href="/tracks/inequality"><img src="../Icons/Inequality - Role of Businesses.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;">
           <p style="padding-top: 20px; display: inline">  
           Inequality : The Role for Businesses</p></a>
           </li>
