--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -583,33 +583,53 @@ The track themes include, but are not limited to: <br>
               <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;font-size: 22px;"><u>SOCIAL ENTREPRENEURSHIP</u><br></h4>
 
               <div class="row-5 w-row">
-              <div class="column-5 w-col w-col-5">
-                <div class="column-1 w-col w-col-1">
-                  
-                </div>
-                <div class="column-8 w-col w-col-8">
-                  <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chair : </p>
-        </h4>
-                              <div class="card-detail" style="width:100%">
-                                <a href="/trackchairs#10">
-                <img src="../track/ProfSatyajitMajumdar.JPG" class="image-hover" alt="Avatar" style="width:100%; height: 227px"></a>
-                <div class="container">
-                  <a href="/trackchairs#10">
-                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Satyajit Majumdar</h4>
-                  </a>
-                  <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(satyajit@tiss.edu)</p> -->
-                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor and Chairperson, Center for Social Entrepreneurship</h5>
-                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Tata Institute of Social Sciences (TISS, Mumbai)</h5>
               
+                
+                <div class="column-6 w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chair : </p>
+                </h4>
+
+
+<div class="row-5">
+                  <div class="column-6 w-col w-col-6">
+
+                        <div class="card-detail" style="width:75%">
+                        <a href="/trackchairs#10">
+                        <img src="../track/ProfSatyajitMajumdar.JPG" class="image-hover" alt="Avatar" style="width:100%; height: 227px"></a>
+                        <div class="container">
+                        <a href="/trackchairs#10">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Satyajit Majumdar</h4>
+                        </a>
+                        <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(satyajit@tiss.edu)</p> -->
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor and Chairperson, Center for Social Entrepreneurship</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Tata Institute of Social Sciences (TISS, Mumbai)</h5>
+                        </div>
+                        </div>
+</div>
+
+                  <div class="column-6 w-col w-col-6">
+
+                        <div class="card-detail" style="width:75%; height: 408px;">
+                        <a href="/trackchairs#10">
+                        <img src="../sushanta.jpg" class="image-hover" alt="Avatar" style="width:100%; height: 227px"></a>
+                        <div class="container">
+                        <a href="/trackchairs#12">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Sushanta Kumar Sarma</h4>
+                        </a>
+                        <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(satyajit@tiss.edu)</p> -->
+                        <h5 class="heading-10" style="font-size: 16px;margin-top: 20px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Dean-Research, Human Resource Management</h5>
+                        <h5 class="heading-10" style="font-size: 16px;margin-top: 20px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">TAPMI</h5>
+                        </div>
+                        </div>
+</div>
+
+</div>
+
                 </div>
 
-              </div>
-                </div>
-                <div class="column-3 w-col w-col-3"></div>
-                
-              </div>
-              <div class="column-7 w-col w-col-7">
-              <div class="column-11 w-col w-col-11">
+
+
+              <div class="column-6 w-col w-col-6">
                  <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
         </h4>
                  <p style="text-align: justify;">
@@ -620,7 +640,7 @@ Social Entrepreneurs are the professionals to manage investments of financial an
               </p>
               </div>
               <div class="column-1 w-col w-col-1"></div>
-            </div>
+            
             </div>
               <div class="column-4 w-col w-col-4"></div>
              <div class="column-4 w-col w-col-4" style="border-right:none !important; text-align: center">
