--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -738,5 +738,10 @@ td.text-right {
             </div>
           </div>
         </div>
+<div class="column-12 w-col w-col-12" style="padding-top: 10px;text-align: center">
+               <p style="text-decoration: ; text-decoration-color: #3b1e9a; font-size: 16px;">In case you wish to pay via wire transfer, please <a href="../Details_of_Wire_Transfer_International[1].doc" target="_blank" style="text-decoration: underline; text-decoration-color: #3b1e9a; font-size: 16px;">click here for details</a></p>
+              </div>
+
+
       </div>
     </div>
