--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,6 +101,7 @@
             </a>
 
           </div>
+          <div class="slide-7 w-slide"></div>
            <!-- <div class="slide-3 w-slide"> -->
             
             
