--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -10,6 +10,8 @@
           letter-spacing: 1px;
           font-family: 'Roboto Condensed', sans-serif;
      }
+
+
     
 /*@media only screen and (max-width: 1280px) {
     .w-slider {
@@ -112,5 +114,163 @@
 
 
 
+
+</div>
+
+
+
+<div class="row-3" style="margin-bottom: 50px;">
+  <div class="jquery-script-ads">
+    <script type="text/javascript"><!--
+    google_ad_client = "ca-pub-2783044520727903";
+    /* jQuery_demo */
+    google_ad_slot = "2780937993";
+    google_ad_width = 728;
+    google_ad_height = 90;
+    
+    //-->
+    </script>
+  
+  </div>
+  <div class="jquery-script-clear"></div>
+
+
+      <div class="heading-tittle color-black w-container" style="max-width: none !important;">
+          <div>
+
+      <div class="w-container"></div>
+     <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;line-height: 32px;">COLLOQIUM PROGRAMME SCHEDULE  </p></h2>
+    </div>
+      
+    </div>
+ 
+
+
+<div class="card-new" style="    box-shadow: 4px 4px 8px 4px rgba(0,0,0,0.2) !important; padding: 10px;">
+<main>
+      <section class="page-section">
+      <div class="container">
+      <div class="timeline">
+      <div class="timeline__wrap">
+      <div class="timeline__items">
+        <div class="timeline__item">
+          <div class="timeline__content">
+          <h2>09:30 a.m. - 10:30 a.m.</h2>
+          <p>Registration</p>
+          </div>
+        </div>
+        <div class="timeline__item">
+          <div class="timeline__content">
+            <h2>10:00 am-10:30 am
+</h2>
+            <p>
+              Tea and Refreshments</p>
+          </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>10:30 am-10:50 am</h2>
+        <p> Keynote speech by Dr. Ambika Zutshi, <br> Deakin University, Melbourne</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>10:55 am-11:40 am</h2>
+        <p>Panel discussion on 'Revisiting research agenda for Sustainability: Options and Futures' <br> <br> 
+Panel members: 
+<li>D.P. Dash, Founding Editor, Journal of Research Practice</li>
+<li>Anshuman Raj, Film maker</li>
+<li>Rajesh Srivastava, Joint President, Global Human Resources, Aditya Birla Group</li>
+</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>11:45 am-12:15 pm</h2>
+        <p>Discussion by Co-Chairs</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>12:20 pm- 12:50 pm</h2>
+        <p>Poster presentations</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>1:00 pm-2:00 pm</h2>
+        <p>Lunch</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>2:00 pm-4:00 pm</h2>
+        <p>Paper presentations</p>
+        </div>
+        </div>
+        <div class="timeline__item">
+        <div class="timeline__content">
+        <h2>4:15 p.m. - 4:45 pm</h2>
+        <p>Valedictory session</p>
+        </div>
+        </div>
+      </div>
+      </div>
+      </div>
+      </div>
+      </section>
+</main>
+</div>
+  
+  <script>
+    
+  timeline(document.querySelectorAll('.timeline'), {
+  forceVerticalMode: 700,
+  mode: 'horizontal',
+  verticalStartPosition: 'left',
+  visibleItems: 3
+  }); 
+  </script>
+  <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+  </script>
+</div>
+
+
+
+
+
+
+
+<div class="row-3" style="margin-bottom: 50px;">
+
+  
+
+
+      <div class="heading-tittle color-black w-container" style="max-width: none !important;">
+          <div>
+
+      <div class="w-container"></div>
+     <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;line-height: 32px;">RESPONDING TO VALUES THROUGH RESEARCH PRACTICE </p></h2>
+    </div>
+      
+    </div>
+ 
+
+
+<div class="card-new" style=" padding: 10px;">
+Researchers work at the boundary between confusion and clarity, scarcely knowing for sure which is which. As borne out by insider accounts of research, uncertainties and ambiguities encountered in the everyday practice of research require researchers to make choices, which are guided as much by objectivity and logic as also by the subjective assessment of researchers. Typically, personal, institutional, and social values influence the choice of research topics and methods. Researchers ought to become aware of the particular values and expectations guiding their work, so that they may exercise their individual agency while contributing to larger purposes. As a human endeavour, the activity of researchers impinge upon the lives of other human beings. Naturally, certain principles of honesty, fairness, transparency, responsibility, and justice must apply to research as much as these apply to other human activities. Therefore, in addition to contributing to larger purposes, researchers need to get accustomed to the idea of responsible conduct. As the practice of research expands to ever new domains, researchers are confronted with tasks for which the craft of research was not designed originally. Yet, the tools and procedures of research, adapted and used innovatively, seem to be effective for channelling individual contributions towards locally valuable outcomes. Such innovations in research appear to be proliferating in a variety of professional fields. Appreciating how research practice may be guided, moulded, or even transformed in response to personal and social values will be the main focus of this seminar.
+
+
+              </p>
+</div>
 
 </div>
