--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -187,9 +187,9 @@
               </div>
               <nav class="w-dropdown-list">
                 <%= link_to "Colloquium Details", details_path, :class => "dropdown-links w-dropdown-link" %>
-                <a href="/schedule" class="dropdown-links w-dropdown-link">Schedule</a>
+                
                 <a href="/application" class="dropdown-links w-dropdown-link">Applications</a>
-                <%= link_to "Co-Chairs", cochair_path, :class => "dropdown-links w-dropdown-link" %>
+                <%= link_to "Leadership", cochair_path, :class => "dropdown-links w-dropdown-link" %>
               </nav>
             </div>
 
