--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,9 +134,10 @@
                 <div>Leadership</div>
               </div>
               <nav class="w-dropdown-list">
-                
+                <a href="/steeringcommittee" class="dropdown-links w-dropdown-link">Steering Committee</a>
                 <%= link_to "External Advisory Committee", eac_path, :class => "dropdown-links w-dropdown-link" %>
                 <a href="/organizingcomittee" class="dropdown-links w-dropdown-link">Organizing Committee</a>
+                <a href="/conferencechairs" class="dropdown-links w-dropdown-link">Conference Chairs</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
