--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -462,7 +462,28 @@ Issues and themes that will be examined in this track are: <br>
                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
                 </h4>
                 <p style="text-align: justify;">
-                Content coming soon.
+                 “True teachers are those who use themselves as bridges over which they invite their students to cross; then, having facilitated their crossing, joyfully collapse, encouraging them to create their own.” 
+― Nikos Kazantzakis
+ <br> <br>
+The objectives of management education are undergoing a shift from merely imparting knowledge and skills for maximising economic returns to a blended approach where knowledge is to be intertwined with socio-economic concerns and responsible education for sustainable growth with a set of relevant competencies. <br>
+With continuous and rapid changes in the environment and the nature and approach of every generation of students, pedagogy needs to be adjusted, modified or even completely changed. Innovation in Pedagogy and curriculum is the theme of this track. <br> <br>
+
+This track invites papers using a wide variety of pedagogy and unconventional curriculum. Some themes are listed below:
+<br>
+<li>The Purpose of Teaching</li>
+<li>Understanding the audience</li>
+<li>Learner Centric Course Design</li>
+<li>Teaching Tools and Methods</li>
+<li>Long Term Effectiveness Vs Short Term Impact on Learning</li>
+<li>Motivating Students</li>
+<li>Engaging Students</li>
+<li>Keeping Content Current</li>
+<li>Assessing Students</li>
+<li>Self-Assessment by Teachers</li>
+<li>Faculty Teaching Panels</li>
+<li>The Future of Learning</li>
+
+These are only illustrative ideas and the theme is open to many more diverse and interrelated topics.
               </p>
               </div>
               <div class="column-1 w-col w-col-1"></div></div>
