--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -61,6 +61,7 @@
             </a>
           </div> -->
           <div class="slide-6 w-slide"></div>
+          <div class="slide-8 w-slide"></div>
           <!-- <div class="slide-6 w-slide"></div> -->
         </div>
         <div class="w-slider-arrow-left">
