--- a/app/views/home/workshopdetails.html.erb
+++ b/app/views/home/workshopdetails.html.erb
@@ -40,11 +40,32 @@
               </div>
         </div>
         <div class="column-6 w-col w-col-6">
-          <div class="card-track" style="height: 227px; padding: 10px;">
+          <div class="card-track" style="height: 235px; padding: 10px;">
 
-            <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif; padding-top: 50px;"> <u> Leveraging PRME for Global Partnerships (in partnership with UN Global Compact) </u></h4>
+            <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif; padding-top: 50px;"> <u> Leveraging PRME for Global Partnerships </u> <br> (in partnership with UN Global Compact) </h4>
+          </div>
+        </div>
+
+      </div>
+      <div class="row-2 w-row">
+        <div class="column-6 w-col w-col-6">
+          <div class="card-track" style="padding: 10px; margin: 0px;">
+
+            <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif; padding-top: 50px;"> <u> Integrating PRME Competency Model in Management Education for Sustainability</u> <br>
+            (in collaboration with UN Global Compact Network India)</h4>
+            <p style="text-align: justify;">
+              United Nations advocated for more “responsible” management education in the Principles of Responsible Management Education (PRME). As we are aware the current management education largely focuses on competitiveness and profits rather than on a balance among profitability, social accountability, responsibility and sustainability. During recent years there have been unprecedented challenges affecting global economy which call for paradigm shift in management education to develop competencies among future managers for responsibility and sustainability. The workshop is meant for faculty who are interested in developing sustainability competencies and integrate these  into the curriculum or those who wish to get inspired for responsible management education,
+Interested participants are requested to register online by 25th November, 2018.  <br> <br>
+Workshop facilitator: <br>
+Prof. Radha R. Sharma <br>
+Chair,  <br>
+Centre for Positive Scholarship  <br>
+for Organisational Sustainability,  <br>
+Chair Professor, OB, MDI Gurgaon <br>
+</p>
           </div>
         </div>
       </div>
+
 
 </div>
