--- a/app/views/home/application.html.erb
+++ b/app/views/home/application.html.erb
@@ -346,6 +346,7 @@ td.text-right {
             </a>
           </div> -->
           <div class="slide-6 w-slide"></div>
+          <div class="slide-8 w-slide"></div>
           <!-- <div class="slide-6 w-slide"></div> -->
         </div>
         <div class="w-slider-arrow-left">
