--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -413,6 +413,7 @@ input[type='checkbox'] {
             </a>
           </div> -->
           <div class="slide-6 w-slide"></div>
+          <div class="slide-8 w-slide"></div>
           <!-- <div class="slide-6 w-slide"></div> -->
         </div>
         <div class="w-slider-arrow-left">
