--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -103,6 +103,80 @@ ul.breadcrumb li a:hover {
     </style>
 <%end%> 
 
+
+<div class="w-row" id ="0" style="height: 900px !important;">
+  <ul class="breadcrumb">
+    <li><a href="/">Home</a></li>
+    <li><a href="/tracks">List of track</a></li>
+    <li>BUILDING INCLUSIVE MARKETS</li>
+  </ul>
+        <div class="column-12 w-col w-col-12">
+        <div class="card-new">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-12" style="padding: 10px;">
+              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;"><u>BUILDING INCLUSIVE MARKETS</u><br></h4>
+              <div class="w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chairs : </p>
+                </h4>
+                <div class="row-5">
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important;">
+                      <a href="/trackchairs##">
+                        <img src="../AseemPrakash.jpg" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
+                      </a>
+                      <div class="container">
+                        <a href="/trackchairs#1">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Aseem Prakash</h4>
+                        </a>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">
+                          Chairperson - School of Public Policy and Governance
+                        </h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Tata Institute of Social Sciences (TISS, Hyderabad)</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important;">
+                      <a href="/trackchairs11">
+                      <img src="../Jeevan.JPG" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
+                    </a>
+                      <div class="container">
+                        <a href="/trackchairs#8">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Jeevan J Arakal</h4>
+                        </a>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor (Marketing)</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">T A Pai Management Institute (TAPMI)</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
+                </h4>
+                <p style="text-align: justify;">
+                Content coming soon.
+              </p>
+              </div>
+              <div class="column-1 w-col w-col-1"></div></div>
+              <div class="column-4 w-col w-col-4"></div>
+             <div class="column-4 w-col w-col-4" style="border-right:none !important; text-align: center">
+               <%= link_to new_abstract_path, :class => "button" do %>
+                <span>Upload your abstract</span>
+                <%end%>
+             </div>
+              
+             
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
 <div class="w-row" id ="1" style="height: 900px !important;">
   <ul class="breadcrumb">
     <li><a href="/">Home</a></li>
@@ -687,57 +761,58 @@ Social Entrepreneurs are the professionals to manage investments of financial an
     <li><a href="/tracks">List of track</a></li>
     <li>SUSTAINABILITY AND DEVELOPMENT</li>
   </ul>
-      <div class="column-12 w-col w-col-12">
+        <div class="column-12 w-col w-col-12">
         <div class="card-new">
           <div class="row-5 w-row">
             <div class="w-col w-col-12" style="padding: 10px;">
-              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;font-size: 22px;"><u>SUSTAINABILITY AND DEVELOPMENT</u><br></h4>
-              <div class="column-5 w-col w-col-5">
-                <div class="column-1 w-col w-col-1">
-                  
+              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;"><u>SUSTAINABILITY AND DEVELOPMENT</u><br></h4>
+              <div class="w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chairs : </p>
+                </h4>
+                <div class="row-5">
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important; height: 386px;">
+                      <a href="/trackchairs##">
+                        <img src="../Dr.-Pamsy-Hui.jpg" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 70% 10%">
+                      </a>
+                      <div class="container">
+                        <a href="/trackchairs#1">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Pamsy Hui</h4>
+                        </a>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">
+                          MBA Programme Director
+                        </h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">The Hong Kong Polytechnic University</h5>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="column- w-col w-col-6">
+                    <div class="card-detail" style="width: 75% !important;">
+                      <a href="/trackchairs11">
+                      <img src="../Satish.JPG" class="image-hover" alt="Avatar" style="width:100%; height: 227px; object-fit: cover; object-position: 0% 10%">
+                    </a>
+                      <div class="container">
+                        <a href="/trackchairs#8">
+                        <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sathis Kumar. G</h4>
+                        </a>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Faculty – Economics and Public Policy</h5>
+                        <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">T A Great Lakes Institute of Management</h5>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="column-8 w-col w-col-8">
-                  <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chair : </p>
-        </h4>
-                              <div class="card-detail" style="width:100%">
-                                <a href="/trackchairs#7">
-                <img src="../Dr.-Pamsy-Hui.jpg" class="image-hover" alt="Avatar" style="width:100%">
-              </a>
-                <div class="container">
-                  <a href="/trackchairs#7">
-                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Pamsy Hui</h4>
-                  </a>
-                  <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(pamsy.hui@polyu.edu.hk)</p> -->
-                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">MBA Programme Director</h5>
-                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">The Hong Kong Polytechnic University</h5>
-              
-                </div>
-
               </div>
-                </div>
-                <div class="column-3 w-col w-col-3"></div>
-                
-              </div>
-              <div class="column-7 w-col w-col-7">
-              <div class="column-11 w-col w-col-11">
-                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
-        </h4>
-                 <p style="text-align: justify;">
-                Asia consists of a large number of emerging economies.  Since the early 1990s, about a billion people in Asia have been lifted out of poverty.  Nevertheless, many are still left behind.  At the same time, the drive to achieve economic development has put immense pressure on both the social and the environmental fronts.  The ambitious, comprehensive and interconnected nature of the 2030 Agenda poses to us all tough questions about the challenges and opportunities ahead.  Can we build sustainable prosperity such that everyone has a chance to flourish and future generations are not left with depleted resources?   <br>
-                <br>
-                Examples of questions to examine in this track include: <br>
-                <li style="text-align: justify">
-                  Does economic development necessarily mean trade-offs in the social and environmental dimensions?  Can the development of social agenda (e.g., gender equality, quality education, quality healthcare) and environmental preservation (e.g., affordable and renewable energy, circular economy) be opportunities for economic development? 
-                </li>
-                <li style="text-align: justify">
-                  What are the biggest challenges within the 2030 Agenda for different Asian economies?  How can we tackle these challenges?
-                </li>
-                <li style="text-align: justify">
-                  Unbridled economic growth and development often brings sustainability challenges, such as widening income gap among people, massive urbanization with insufficient infrastructure, deforestation with threats to biodiversity, inadequate waste management endangering life on land and below water, etc.  Many such issues call for policy interventions.  How can public-private partnership help us build a sustainable future?
-                </li>
-                <li style="text-align: justify">
-                  Other questions that address sustainability issues related to economic development are welcome.
-                </li>
+              <div class="w-col w-col-6">
+                <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
+                </h4>
+                <p style="text-align: justify;">
+                Asia consists of a large number of emerging economies. Since the early 1990s, about a billion people in Asia have been lifted out of poverty. Nevertheless, many are still left behind. At the same time, the drive to achieve economic development has put immense pressure on both the social and the environmental fronts. The ambitious, comprehensive and interconnected nature of the 2030 Agenda poses to us all tough questions about the challenges and opportunities ahead. Can we build sustainable prosperity such that everyone has a chance to flourish and future generations are not left with depleted resources? 
+<br>
+Examples of questions to examine in this track include:  <br>
+<li>Does economic development necessarily mean trade-offs in the social and environmental dimensions? Can the development of social agenda (e.g., gender equality, quality education, quality healthcare) and environmental preservation (e.g., affordable and renewable energy, circular economy) be opportunities for economic development? </li>
+<li>What are the biggest challenges within the 2030 Agenda for different Asian economies? How can we tackle these challenges? </li>
+<li>Unbridled economic growth and development often brings sustainability challenges, such as widening income gap among people, massive urbanization with insufficient infrastructure, deforestation with threats to biodiversity, inadequate waste management endangering life on land and below water, etc. Many such issues call for policy interventions. How can public-private partnership help us build a sustainable future? </li>
+<li>Other questions that address sustainability issues related to economic development are welcome. </li>
               </p>
               </div>
               <div class="column-1 w-col w-col-1"></div></div>
@@ -747,14 +822,12 @@ Social Entrepreneurs are the professionals to manage investments of financial an
                 <span>Upload your abstract</span>
                 <%end%>
              </div>
-             <div class="column-4 w-col w-col-4"></div>
               
-
-
+             
             </div>
           </div>
         </div>
-      </div>
+
 </div>
 
 
@@ -856,4 +929,73 @@ The following are a few suggestive themes, but not limited to: <br>
           </div>
         </div>
       </div>
+
+
+
+            <div class="w-row" id="10">
+        <ul class="breadcrumb">
+    <li><a href="/">Home</a></li>
+    <li><a href="/tracks">List of track</a></li>
+    <li>SUSTAINABLE CITIES</li>
+  </ul>
+      <div class="column-12 w-col w-col-12">
+        <div class="card-new">
+          <div class="row-5 w-row">
+            <div class="w-col w-col-12" style="padding: 10px;">
+              <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;font-size: 22px;"><u>SUSTAINABLE CITIES</u><br></h4>
+
+              <div class="row-5 w-row">
+              <div class="column-5 w-col w-col-5">
+                <div class="column-1 w-col w-col-1">
+                  
+                </div>
+                <div class="column-8 w-col w-col-8">
+                  <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Chair : </p>
+        </h4>
+                              <div class="card-detail" style="width:100%">
+                                <a href="/trackchairs#6">
+                <img src="../anita.jpg" class="image-hover" alt="Avatar" style="width:100%; height: 227px">
+              </a>
+                <div class="container">
+                  <a href="/trackchairs#6">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Anita Basalingappa</h4>
+                  </a>
+                  <!-- <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(kuperan@uum.edu.my)</p> -->
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor, Chairperson - Online Programmes</h5>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">MICA</h5>
+              
+                </div>
+
+              </div>
+                </div>
+                <div class="column-3 w-col w-col-3"></div>
+                
+              </div>
+              <div class="column-7 w-col w-col-7">
+              <div class="column-11 w-col w-col-11">
+                 <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Track Description: </p>
+                 </h4>
+                 <p style="text-align: justify;">
+                    Content coming soon.
+
+                 </p>
+              </div>
+              <div class="column-1 w-col w-col-1"></div>
+            </div>
+            </div>
+              <div class="column-4 w-col w-col-4"></div>
+             <div class="column-4 w-col w-col-4" style="border-right:none !important; text-align: center">
+               <%= link_to new_abstract_path, :class => "button" do %>
+                <span>Upload your abstract</span>
+                <%end%>
+             </div>
+             <div class="column-4 w-col w-col-4"></div>
+              
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
       </div>
