--- a/app/views/home/tracks.html.erb
+++ b/app/views/home/tracks.html.erb
@@ -125,7 +125,7 @@ ul {
           </li>
 
           <li style="width:50%;">
-            <a><img src="../Icons/BuildingInclusiveMarkets.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Building Inclusive Markets</p>
+            <a href="/trackdetails#0"><img src="../Icons/BuildingInclusiveMarkets.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Building Inclusive Markets</p>
             </a>
           </li>
 
@@ -217,7 +217,7 @@ ul {
           
 
           <li style="width:50%;">
-          <a href=""><img src="../Icons/Sustainable Cities.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainable Cities</p></a>
+          <a href="/trackdetails#10"><img src="../Icons/Sustainable Cities.png" style="height: 20px; width: 20px; display: inline;font-size: 15px;"><p style="padding-top: 20px; display: inline"> Sustainable Cities</p></a>
           </li>
 
         </ul>
